Reduce bio section right margin on smaller screens and fix problem with grid=template-columns name in bio media query

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,7 +205,8 @@ footer {
     }
 
     .bio {
-        grid-column-template: 100%;
+        grid-template-columns: 100%;
+        margin-right: 1vw;
     }
 
     .bio-text {
